# valheim-discord-bot

./: .dockerignore  .env.example  Dockerfile  README.md  bot.py  check_formatting.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  test_simple.py
.github/workflows/: README.md  ci.yml  test.yml  tests.yml
scripts/: dev.py  dev.sh
src/: bot.py  health.py
test/: run_tests.py  test_bot.py  test_bot_pytest.py  test_simple.py
